--- a/app/views/messages/_index.html.erb
+++ b/app/views/messages/_index.html.erb
@@ -27,7 +27,7 @@
   </tbody>
 </table>
 
-<button type="button" class="btn btn-md btn-primary" id="myBtn">Add a post</button>
+<button type="button" class="btn btn-md btn-primary" id="myBtn">Add a Message</button>
 
 <div id="user-modal" class="modal fade"></div>
 <!-- Modal -->
@@ -36,45 +36,15 @@
     <div class="modal-content">
       <button type="button" class="close" data-dismiss="modal">&times;</button>
 
-      <%= form_for ([@user, @event]), :html => { :class => "form-horizontal event" } do |f| %>
+      <%= form_for @message, :html => { :class => "form-horizontal event" } do |f| %>
 
-        <% if @event.errors.any? %>
-          <div id="error_expl" class="panel panel-danger">
-            <div class="panel-heading">
-              <h3 class="panel-title"><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h3>
-            </div>
-            <div class="panel-body">
-              <ul>
-              <% @event.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-              <% end %>
-              </ul>
-            </div>
-          </div>
-        <% end %>
+
         <div class="form-group">
-          <%= f.label :time, :class => 'control-label col-lg-2' %>
-          <div class="col-md-10">
-            <%= f.time_select :time, {ampm: true, minute_step: 15} %>
-          </div>
-          <%=f.error_span(:time) %>
-        </div>
-        <div class="form-group">
-          <%= f.label :location, :class => 'control-label col-lg-2' %>
+          <%= f.label "Your Message:", :class => 'control-label col-lg-2' %>
           <div class="col-lg-10">
-            <%= f.text_field :location, :class => 'form-control' %>
-          </div>
-          <%=f.error_span(:location) %>
-        </div>
-        <div class="form-group">
-          <%= f.label :description, :class => 'control-label col-lg-2' %>
-          <div class="col-lg-10">
-            <%= f.text_field :description, :class => 'form-control' %>
-            <%= f.text_field :is_carpool, value: true %>
+            <%= f.text_area :body, rows: 7, :class => 'form-control' %>
             <%= f.text_field :concert_id, value: params[:format] %>
             <%= f.text_field :carpool, value: "true" %>
-
-
           </div>
           <%=f.error_span(:description) %>
         </div>
@@ -82,7 +52,7 @@
           <div class="col-lg-offset-2 col-lg-10">
             <%= f.submit 'Submit', :class => 'btn btn-primary' %>
             <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                      user_events_path, :class => 'btn btn-default' %>
+                      user_messages_path, :class => 'btn btn-default' %>
           </div>
         </div>
 
