--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -32,7 +32,7 @@
 </div>
 </div>
 <div class="event-buttons">
-  <%= link_to 'New Meetup', new_user_event_path(params[:user_id]), class: 'btn btn-primary' %>
+  <button type="button" class="btn btn-md btn-primary" id="myBtn">New Meetup2</button>
 </div>
 
 
