--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -1,26 +1,24 @@
 <%- model_class = Concert -%>
-<div class="page-header">
-</div>
-
-<div class="pic-container">
-  <dl class="dl-horizontal">
-<img src="<%= @concert.image%>"/>
+<div class="background-pic">
+  <div class="pic-container">
+    <dl class="dl-horizontal">
+      <img src="<%= @concert.image%>"/>
+    </dl>
   </div>
 </div>
 
-<div class="concert-container">
-  <dl class="dl-horizontal">
-    <dt><strong><%= model_class.human_attribute_name(:artist) %>:</strong></dt>
-    <dd><%= @concert.artist %></dd>
-    <dt><strong><%= model_class.human_attribute_name(:venue) %>:</strong></dt>
-    <dd><%= @concert.venue %></dd>
-    <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
-    <dd><%= @concert.date.strftime("%A, %b %d at %I %p")%></dd>
-  </dl>
+  <div class="concert-container">
+    <dl class="dl-horizontal">
+      <dt><strong><%= model_class.human_attribute_name(:artist) %>:</strong></dt>
+      <dd><%= @concert.artist %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:venue) %>:</strong></dt>
+      <dd><%= @concert.venue %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:date) %>:</strong></dt>
+      <dd><%= @concert.date.strftime("%A, %b %d at %I %p")%></dd>
+    </dl>
 
-  <div class="button-container">
-    <%= link_to 'Carpool', user_events_path(current_user.id,@concert, carpool: true), class: 'btn btn-primary' %>
-    <%= link_to 'Meetup', user_events_path(current_user.id, @concert, carpool: false), class: 'btn btn-primary' %>
+    <div class="button-container">
+      <%= link_to 'Carpool', user_events_path(current_user.id,@concert, carpool: true), class: 'btn btn-primary' %>
+      <%= link_to 'Meetup', user_events_path(current_user.id, @concert, carpool: false), class: 'btn btn-primary' %>
+    </div>
   </div>
-</div>
-</div>
