--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -7,10 +7,14 @@
    margin-top: 20px;
   text-align: center;
  }
- h5 {
-  margin-top: 50px;
+   h5 {
   text-align: center;
+  margin-bottom: 30px;
   }
+
+  /*.carpool-pic {
+    background-image: url('http://i.imgur.com/MBzsuab.jpg');
+  }*/
 
   .meetup-container {
     height: 67vh;
@@ -18,6 +22,19 @@
 
   .event-container {
     height: 78vh;
+  }
+
+  .map-fields {
+    display: inline-flex;
+  }
+
+  .map-fields button {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .map-fields input {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
  #map {
@@ -35,6 +52,7 @@
    box-shadow: 2px 2px 10px #B1B1B1;
    margin-top: 25px;
    border-width: 7px;
+   margin: auto;
  }
  #floating-panel {
    z-index: 5;
