--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -1,4 +1,7 @@
-
+<div class="carpool-container">
+<div class="page-header">
+  <h1>Hitch a Ride</h1>
+</div>
 <h5>If you dig a carpool to your gig, enter your pickup location below. Click the button to see the other carpools in your area.</h5>
 <div id='map-container'>
   <div id="floating-panel">
