--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -60,8 +60,8 @@
               <%= f.label :description, :class => 'control-label col-lg-2'%>
               <div class="col-lg-10">
                 <%= f.text_area :description, :class => 'form-control', rows: 10 %>
-                <%= f.text_field :carpool, value: "false" %>
-                <%= f.text_field :concert_id, value: params[:format] %>
+                <%= f.hidden_field :carpool, value: "false" %>
+                <%= f.hidden_field :concert_id, value: params[:format] %>
               </div>
               <%=f.error_span(:description) %>
             </div>
