--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -3,6 +3,8 @@
   <h1>Hitch a Ride</h1>
 </div>
 <h5>If you dig a carpool to your gig, enter your pickup location below. Click the button to see the other carpools in your area.</h5>
+<div class="left-guitar"><img src="http://i.imgur.com/Feymelw.png"/></div>
+<div class="right-guitar"><img src="http://i.imgur.com/VKqPkpY.png"/></div>
 <div id='map-container'>
   <div id="floating-panel">
     <div class="map-fields">
