--- a/app/views/concerts/_index.html.erb
+++ b/app/views/concerts/_index.html.erb
@@ -1,7 +1,7 @@
 <div class="concert-index">
 <%- model_class = Concert -%>
 <div class="page-header">
-  <h1 class="concert_title">Your Concerts</h1>
+  <h1>Your Concerts</h1>
 </div>
 <div class="table-container">
 <table class="table">
