--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -2,7 +2,7 @@
 <div class="background-pic">
   <div class="pic-container">
     <dl class="dl-horizontal">
-      <img src="<%= @concert.image%>"/>
+        <img src="<%= @concert.image%>" id="conc-image"/>
     </dl>
   </div>
 </div>
