--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,50 +1,38 @@
 <div class="event-index">
   <%- model_class = Event -%>
 
-<<<<<<< HEAD
-<% if params[:carpool] == "false" %>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
-
-  <div class="table-container meetup-container">
-  <table class="table">
-    <thead>
-            <th><%= model_class.human_attribute_name(:description) %></th>
-            <th><%= model_class.human_attribute_name(:time) %></th>
-            <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </thead>
-    <tbody>
-      <% @events.each do |event| %>
-        <tr onclick="location.href='<%= event_path(params[:user_id],event.id,{"carpool"=>"false"}) %>'">
-          <td><%= event.description %></td>
-          <td><%= event.time.strftime("%I:%M%p").downcase %></td>
-          <td>
-              <%= link_to 'Join', user_messages_path(event, params[:user_id]), class: 'btn btn-default btn-xs'  %>
-              <% if (current_user.id == event.concert.user_id) %>
-                <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                            edit_event_path(event), :class => 'btn btn-default btn-xs' %>
-              <% end %>
-          </td>
-          </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-</div>
-<div class="event-buttons">
-  <button type="button" class="btn btn-md btn-primary" id="myBtn">New Meetup2</button>
-</div>
-
-
-
-
-  <div id="user-modal" class="modal fade"></div>
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+  <% if params[:carpool] == "false" %>
+  <div class="page-header">
+    <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  </div>
+    <div class="table-container meetup-container">
+    <table class="table">
+      <thead>
+              <th><%= model_class.human_attribute_name(:description) %></th>
+              <th><%= model_class.human_attribute_name(:time) %></th>
+              <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      </thead>
+      <tbody>
+        <% @events.each do |event| %>
+          <tr onclick="location.href='<%= event_path(current_user.id,event.id,{ carpool: 'false'}) %>'">
+            <td><%= event.description %></td>
+            <td><%= event.time.strftime("%I:%M%p").downcase %></td>
+            <td>
+                <%= link_to 'Join', user_messages_path(current_user.id, event.id,{carpool: "false"}), class: 'btn btn-default btn-xs'  %>
+                <% if (current_user.id == event.concert.user_id) %>
+                  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                              edit_event_path(event), :class => 'btn btn-default btn-xs' %>
+                <% end %>
+            </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="event-buttons">
+    <button type="button" class="btn btn-md btn-primary" id="myBtn">New Meetup</button>
+  </div>
 
     <div id="user-modal" class="modal fade"></div>
     <!-- Modal -->
