fix messages margin

--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <%= f.text_field :location %>
+  <%= f.hidden_field :location %>
   <% end %>
   <div id='map'></div>
 </div>
