add field in messages index table for username, fix date format for time field

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -81,7 +81,15 @@
 
   td a:hover {
    background-color: transparent;
+   text-decoration: none;
+   color: black;
  }
+
+ td a:visited {
+  background-color: transparent;
+  text-decoration: none;
+  color: black;
+}
 
  .dl-horizontal img {
    margin-bottom: 10%;
