Add current concert bar to events index page, add styling, need to polish

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -105,3 +105,8 @@
  .event-show {
    text-align: center;
  }
+
+ .current-concert.text-center {
+    border: 1px solid;
+    background-color: #c4cad8;
+}
