--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -11,7 +11,7 @@
     <button id="drop" onclick="drop()">See Carpools</button>
     <input id="address" class="removeOnFocus"type="textbox" value="Enter Address">
     <%= form_for [@user, @event], url: {action: "create"}, html: {:method => :post} do |f| %>
-    <input type="hidden" name="id" value="<%= @concert.id %>">
+    <input type="hidden" name="concert_id" value="<%= @concert.id %>">
     <input type="hidden" name="user_id" value="<%= current_user.id %>">
     <input type="hidden" name="carpool" value="carpool">
     <input id="submit" type="button" value="Submit Address">
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <%= f.hidden_field :location %>
+  <%= f.text_field :location %>
   <% end %>
   <div id='map'></div>
 </div>
