fix search results styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -219,6 +219,11 @@
 
 #concert-lookup-results {
   display:none;
+  color: #fff;
+}
+
+#concert-lookup-results h2 {
+  color: #fff;
 }
 
 .well.results-block {
