--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -16,7 +16,7 @@
   <%= render 'common/spinner' %>
 
   <div >
-    <table  id="concert-lookup-results" class="table table-striped table-hover">
+    <table  id="concert-lookup-results" class="table-container">
     </table>
   </div>
 
