--- a/app/assets/stylesheets/concerts.css
+++ b/app/assets/stylesheets/concerts.css
@@ -59,16 +59,18 @@ dl-horizontal {
 }
 
 .alert-warning {
-  background-color: 	#9c2c86;
+  background-color: #9c2c86;
   background-image: url("http://i.imgur.com/5RMLfSp.jpg?1");
   background-repeat: no-repeat;
   border: none;
   z-index: 1;
   background-size: cover;
+  height: 40rem;
+  width: 100%;
 
 }
-
-/*#concert-lookup-results {
+/*
+concert-lookup-results {
   width: 100%;
   max-width: 100%;
   content: center;
