adding flash to search. not completed

--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -15,7 +15,7 @@
   <% end %>
   <%= render 'common/spinner' %>
 
-  <div >
+  <div class="well results-block">
     <table  id="concert-lookup-results" class="table table-striped table-hover">
     </table>
   </div>
