flash messages on failed searches

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,7 @@
 
     <div>
       <div class="container-fluid top-div">
-        <%= bootstrap_flash %>
+        <%= bootstrap_flash id:"flash-id" %>
         <%= yield %>
       </div>
     </div>
