Fix concert show info to center page, remove alert container on concert search page

--- a/app/assets/stylesheets/concerts.css
+++ b/app/assets/stylesheets/concerts.css
@@ -6,7 +6,7 @@
 .concert-container {
   width: 500px;
   margin: 0 auto;
-  margin-left: 22%;
+  margin-left: 29%;
   height: 73vh;
   padding-top: 3%;
 }
@@ -58,14 +58,43 @@ dl-horizontal {
   border: none;
 }
 
-.alert-warning {
-  background-color: 	#9c2c86;
+/*.alert-warning {
   background-image: url("http://i.imgur.com/5RMLfSp.jpg?1");
   background-repeat: no-repeat;
   border: none;
   z-index: 1;
-  background-size: cover;
+  background-size: contain;
+  width: 100%;
+  max-height: 560px;
 
+}*/
+/*
+.search-container {
+  justify-content: center;
+  background-image: url("http://i.imgur.com/5RMLfSp.jpg?1");
+  background-repeat: no-repeat;
+  border: none;
+  z-index: 1;
+  background-size: contain;
+  width: 100%;
+  max-height: 560px;
+}*/
+
+#search-container {
+  min-height: 80vh;
+  max-height: 560px;
+  justify-content: center;
+  background-image: url("http://i.imgur.com/5RMLfSp.jpg?1");
+  background-repeat: no-repeat;
+  border: none;
+  z-index: 1;
+  background-size: contain;
+  width: 100%;
+  max-height: 560px;
+}
+
+.concert-index {
+  margin-top: -60px;
 }
 
 /*#concert-lookup-results {
@@ -77,8 +106,4 @@ dl-horizontal {
 
 .search-title {
   color: 	#9c2c86;
-}
-
-.search-container {
-  justify-content: center;
 }
