solved merge conflicts

--- a/app/views/concerts/_search.html.erb
+++ b/app/views/concerts/_search.html.erb
@@ -16,7 +16,7 @@
   <%= render 'common/spinner' %>
 
 
-  <div  class="well results-block">
+  <div>
     <table  id="concert-lookup-results" class="table-container">
 
     </table>
