Adjust guitar pic left and right margins for small screens

--- a/app/assets/stylesheets/concerts.css
+++ b/app/assets/stylesheets/concerts.css
@@ -3,6 +3,13 @@
   They will automatically be included in application.css.
 */
 
+.event-show-info {
+  width: 100%;
+}
+
+.event-show-info dl {
+
+
 .concert-container {
   width: 500px;
   margin: 0 auto;
@@ -56,29 +63,7 @@ dl-horizontal {
   width: 0px;
   background-color: transparent;
   border: none;
-}
-
-/*.alert-warning {
-  background-image: url("http://i.imgur.com/5RMLfSp.jpg?1");
-  background-repeat: no-repeat;
-  border: none;
-  z-index: 1;
-  background-size: contain;
-  width: 100%;
-  max-height: 560px;
-
-}*/
-/*
-.search-container {
-  justify-content: center;
-  background-image: url("http://i.imgur.com/5RMLfSp.jpg?1");
-  background-repeat: no-repeat;
-  border: none;
-  z-index: 1;
-  background-size: contain;
-  width: 100%;
-  max-height: 560px;
-}*/
+} 
 
 #search-container {
   min-height: 80vh;
