--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -21,6 +21,7 @@
     height: 370px;
     width: auto;
     margin-left: 3%;
+    margin-right: -20px;
   }
 
   .left-guitar img, .right-guitar img {
@@ -33,6 +34,7 @@
     width: auto;
     float: right;
     margin-right: 1%;
+    margin-right: -50px;
   }
 
   .meetup-container {
