--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,7 +12,7 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
-
+<div class="event-show-info">
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:time) %>:</strong></dt>
   <dd><%= @event.time.strftime("%A, %b %d at %I %p")%></dd>
@@ -21,6 +21,7 @@
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @event.description %></dd>
 </dl>
+</div>
 
 <%= render 'messages/index'%>
 </div>
