--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -110,5 +110,9 @@
 
  .current-concert.text-center {
     border: 1px solid;
-    background-color: #c4cad8;
-}
+    /*background-color: #AFB2B7;*/
+    background: -webkit-linear-gradient(#F0F1F3, #AFB2B7); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#F0F1F3, #AFB2B7); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#F0F1F3, #AFB2B7); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#F0F1F3, #AFB2B7); /* Standard syntax */
+    }
