add pic of bradley, fix guitar right margin

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -34,7 +34,7 @@
     width: auto;
     float: right;
     margin-right: 1%;
-    margin-right: -50px;
+    margin-left: -50px;
   }
 
   .meetup-container {
