--- a/app/views/events/_map.html.erb
+++ b/app/views/events/_map.html.erb
@@ -1,40 +1,45 @@
+
+<h1 class="hitch-a-ride">Hitch a Ride</h1>
+<h5 class="hitch-a-ride">If you dig a carpool to your gig, enter your pickup location below. Click the button to see the other carpools in your area.</h5>
+
 <div class="carpool-container">
-<div class="page-header">
-  <h1>Hitch a Ride</h1>
-</div>
-<h5>If you dig a carpool to your gig, enter your pickup location below. Click the button to see the other carpools in your area.</h5>
-<div class="left-guitar"><img src="http://i.imgur.com/Feymelw.png"/></div>
-<div class="right-guitar"><img src="http://i.imgur.com/VKqPkpY.png"/></div>
-<div id='map-container'>
-  <div id="floating-panel">
-    <div class="map-fields">
-    <button id="drop" onclick="drop()">See Carpools</button>
-    <input id="address" class="removeOnFocus"type="textbox" value="Enter Address">
-    <%= form_for [@user, @event], url: {action: "create"}, html: {:method => :post} do |f| %>
-    <input type="hidden" name="concert_id" value="<%= @concert.id %>">
-    <input type="hidden" name="user_id" value="<%= current_user.id %>">
-    <input type="hidden" name="carpool" value="carpool">
-    <input id="submit" type="button" value="Submit Address">
-    <%= f.submit 'Confirm Pin', :id => 'confirm_button'%>
+
+
+  <div class="left-guitar flex-1"><img src="http://i.imgur.com/Feymelw.png"/></div>
+
+  <div id='map-container' class="flex-2">
+    <div id="floating-panel">
+      <div class="map-fields">
+      <button id="drop" onclick="drop()">See Carpools</button>
+      <input id="address" class="removeOnFocus"type="textbox" value="Enter Address">
+      <%= form_for [@user, @event], url: {action: "create"}, html: {:method => :post} do |f| %>
+      <input type="hidden" name="concert_id" value="<%= @concert.id %>">
+      <input type="hidden" name="user_id" value="<%= current_user.id %>">
+      <input type="hidden" name="carpool" value="carpool">
+      <input id="submit" type="button" value="Submit Address">
+      <%= f.submit 'Confirm Pin', :id => 'confirm_button'%>
+      </div>
     </div>
+
+    <%= f.hidden_field :location %>
+    <% end %>
+    <div id='map'></div>
   </div>
 
-  <%= f.hidden_field :location %>
-  <% end %>
-  <div id='map'></div>
-</div>
+  <div class="right-guitar flex-3"><img src="http://i.imgur.com/VKqPkpY.png"/></div>
 
-<% if @events.count > 0 %>
-  <% @events.each do |event| %>
-    <div class="lats" style="display: none;">
-      <%= event.get_lat %>
-    </div>
-    <div class="lngs" style="display: none;">
-      <%= event.get_lng %>
-    </div>
-    <br/>
+
+  <% if @events.count > 0 %>
+    <% @events.each do |event| %>
+      <div class="lats" style="display: none;">
+        <%= event.get_lat %>
+      </div>
+      <div class="lngs" style="display: none;">
+        <%= event.get_lng %>
+      </div>
+      <br/>
+    <% end %>
   <% end %>
-<% end %>
 </div>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2J6ZL433xkOnMv5zhsr7sQkGg4TYP0Dg&callback=initMap" async defer></script>
